--- a/render.yaml
+++ b/render.yaml
@@ -8,7 +8,7 @@ services:
     repo: https://github.com/Shashankls/GPlink-bot # optional
     region: oregon # optional (defaults to oregon)
     plan: free # optional (defaults to starter)
-    branch: main # optional (defaults to master)
+    branch: masters # optional (defaults to master)
     numInstances: 1 # optional (defaults to 1)
     healthCheckPath: /
 
